--- a/ProjekatWeb/WebContent/css/user.css
+++ b/ProjekatWeb/WebContent/css/user.css
@@ -375,6 +375,15 @@ right: 0;
 background-color: rgba(0, 0, 0, 0.7);
 display: none;
 }
+.overlay {
+	width: 100%;
+	height: 90%;
+	position: fixed;
+	top: 20%;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: none;
+}
 @media screen and (max-width:600px) {
 #logo{display: none;}
 
