--- a/ProjekatWeb/WebContent/css/video.css
+++ b/ProjekatWeb/WebContent/css/video.css
@@ -395,6 +395,15 @@ select{
     margin-bottom: 16px;
     resize: none;
 }
+.overlay {
+	width: 100%;
+	height: 90%;
+	position: fixed;
+	top: 20%;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: none;
+}
 @media screen and (max-width:600px) {
 #logo{display: none;}
 
